--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-file-system": "^14.0.0",
+    "expo-media-library": "^14.1.0",
+    "expo-permissions": "^13.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-paper": "^4.12.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.182",
+    "@types/react-native": "^0.67.8"
   },
   "private": true
 }
